--- a/src/container/index.hbs
+++ b/src/container/index.hbs
@@ -3,97 +3,37 @@
 в якому міститься код, котрий буде віддаватися по шляху (PATH) - "/"
 --}}
 
-{{!-- <style>
-    h1 {
-        color: aqua;
-    }
-</style>
+<main class="p-5">
+    <div class="card p-5 mb-5">
+        <p hidden id="test">
+            Hello world!
+        </p>
+        <p>zdvfbdflkbnsdxj,vn dv,fn ,fxnv lkcv n</p>
+        <span hidden class="test">test111</span>
+        <span>test est test test test test</span>
+    </div>
 
-<div class="p-5 box">
-    <h1 style="color:blue">USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
-    <h1 id="user">USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
-    <h1>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h1>
+    <pre>
+                    aaagfcvkmbyxefafbgnfgn gbngcb fbbfcv dxc gv ngvb 
+    </pre>
 
+    <div>
+        block
+    </div>
+    <div>
+        block
+    </div>
 
-    <h2>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h2>
-    <h3>USB хаб Type C 12 в 1 HDMI VGA AUX 3.5 mm</h3>
+    <div style="margin: 50px 0 50px 100px; background: gray; height: 200;">
+        <span>inline</span>
+        <span>inline</span>
+        <span class="block">inline inline nkf smfjdlf mgldbn n skvnslfk</span>
+    </div>
 
-    <button type="button" class="btn btn-primary">Купити</button>
-
-    <button type="button" class="button">Купити</button>
-
-    <p>TEST</p>
-</div> --}}
-
-
-{{!-- <div class="card p-5 m-5 card-dark">
-    <ul>
-        <li class="item">1</li>
-        <li class="item">2</li>
-        <li class="item">3</li>
-        <li class="item">4</li>
-        <li class="item">5</li>
-    </ul>
-</div>
-
-<div class="card p-5 m-5 card-dark">
-    <ul>
-        <li class="item">1</li>
-        <li class="item">2</li>
-        <li class="item">3</li>
-        <li class="item">4</li>
-        <li class="item">5</li>
-    </ul>
-</div>
-
-<div class="card p-5 m-5 card-dark">
-
-    <div class="item">1</div>
-    <p class="item">2</p>
-    <em class="item">3</em>
-    <b class="item">4</b>
-    <article class="item">5</article>
-    <strong class="item">test</strong>
-    <hr>
-    <div class="item">1</div>
-    <p class="item">2</p>
-    <em class="item">3</em>
-    <b class="item">4</b>
-    <article class="item">5</article>
-</div>
-
-
-<div class="card p-5 m-5 card-dark">
-    <p class="item">1</p>
-    <p class="item">2</p>
-    <p class="item">3</p>
-    <p class="item">4</p>
-    <p class="item">5</p>
-</div> --}}
-
-
-<div class="card p-5 m-5 card-dark">
-    <input class="input-dark" placeholder="this is text" required>
-    <input class="input-dark" type="number">
-</div>
-
-<div class="card p-5 m-5 card-dark img">
-    <img alt="image small card 300px" class="small-img" src="https://picsum.photos/200/300" height="300" />
-    <a href="https://picsum.photos/200/300" rel="external">Link</a>
-
-    <button class="btn">Click me</button>
-    <br>
-    <br>
-    <a class="btn btn-secondary" href="https://picsum.photos/200/300" rel="external">Link</a>
-
-    <br>
-    <a class="small btn btn-secondary big" href="https://picsum.photos/200/300" rel="external">Link</a>
-</div>
-
-<div class="card p-5 m-5 card-dark">
-    <p class="big-text">This is test This is test This is test This is test This is test This is test This is test This
-        is test</p>
-</div>
+    <div>
+        block
+    </div>
+</main>
 {{!-- Цей код містить лише те, що буде виводитись в
 
 <body>
