--- a/public/css/template-3 copy.css
+++ b/public/css/template-3 copy.css
@@ -18,8 +18,6 @@
 
   --weight-title: 500;
   --weight-text: 400;
-
-  --page-width: 960px;
 }
 
 /* =================================================================================== */
@@ -31,15 +29,13 @@
   justify-content: center;
 }
 .page_content {
-  max-width: var(--page-width);
+  max-width: 960px;
   width: 100%;
 
   display: flex;
   flex-direction: column;
 
   gap: 80px;
-
-  padding-top: 74px;
 }
 /* ==================================================================================== */
 .header {
@@ -48,16 +44,6 @@
 
   display: flex;
   justify-content: space-between;
-
-  position: fixed;
-
-  width: var(--page-width);
-
-  top: 0;
-  left: calc(50% - (var(--page-width) / 2));
-
-  background-color: var(--color-white);
-  z-index: 1;
 }
 .logo {
   font-size: 17px;
@@ -226,73 +212,4 @@ width: 100%;
 max-width: 160px;
 color: var(--color-text);
 }
-.hero_slider_icon {
-  background: var(--color-primary);
-  width: 30px;
-  height: 30px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: var(--border-radius);
-  color: var(--color-white);
 
-  position: absolute;
-
-  top: calc(50% - 15px);
-}
-.hero_slider_icon:hover {
-  opacity: 0.5;
-  cursor: pointer;
-}
-.hero_slider {
-  position: relative;
-}
-.hero_slider_left {
-  left: var(--space-l);
-}
-.hero_slider_right {
-  right: var(--space-l);
-}
-.modal {
-  position: sticky;
-  bottom: 24px;
-  left: 200px;
-
-  /* height: 100px; */
-  width: 600px;
-  background: black;
-  color: #FFFFFF;
-
-
-  padding: 24px;
-
-  border-radius: 24px;
-
-  line-height: 150%;
-
-  z-index: 2;
-}
-.modal_image {
-  height: 400px;
-  width: 500px;
-  float: left;
-  margin-right: 12px;
-  margin-top: 12px;
-
-  object-fit: scale-down;
-  background-color: aqua;
-  object-position: 10px 10px;
-}
-.modal_text {
-  clear: both;
-}
-.hero {
-  user-select: none;
-}
-.input {
-  caret-color: var(--color-primary);
-  border: 1px solid var(--color-title);
-}
-:root {
-  scroll-behavior: smooth;
-}
