--- a/src/component/card.hbs
+++ b/src/component/card.hbs
@@ -7,8 +7,8 @@
         <div class="card_block">
             <span class="card_price_amount">
                 ${{price}}
-            </span class="card_price_duration">
-            <span>
+            </span>
+            <span class="card_price_duration">
                 / mo
             </span>
         </div>
