--- a/src/container/template-1 copy.hbs
+++ b/src/container/template-1 copy.hbs
@@ -20,7 +20,7 @@
                     </div>
                 </nav>
             </header>
-            {{!-- {{> divider }} --}}
+            {{> divider }}
         </div>
 
         <div class="page_block">
@@ -40,9 +40,9 @@
             </main>
         </div>
         <div class="page_block">
-            {{!-- {{> divider }} --}}
+            {{> divider }}
 
-            <footer class="row g-0 footer">
+            <footer class="row footer">
                 <div class="col-3">
                     {{> logo }}
                     <span class="footer_copyright">Copyright 2023-2024</span>
