--- a/src/container/template-1.hbs
+++ b/src/container/template-1.hbs
@@ -34,10 +34,28 @@
                 <div class="col plans_card">
                     {{> card data=this}}
                 </div>
-
-
                 {{/each}}
             </main>
+        </div>
+
+        <div class="page_block">
+            <div>
+                <table class="table">
+                    <caption>My table</caption>
+                    <tbody>
+                        {{#each footer}}
+                        <tr>
+                            {{#each links}}
+                            <td>
+                                {{text}}
+                            </td>
+                            {{/each}}
+                            <td></td>
+                        </tr>
+                        {{/each}}
+                    </tbody>
+                </table>
+            </div>
         </div>
         <div class="page_block">
             {{!-- {{> divider }} --}}
