--- a/public/css/template-2.css
+++ b/public/css/template-2.css
@@ -8,6 +8,9 @@
 }
 .header {
   padding: 24px;
+  border-bottom: 1px solid #DEE2E6;
+  display: flex;
+  justify-content: space-between;
 }
 .logo {
   font-size: 17px;
@@ -48,6 +51,10 @@ text-decoration: none;
 }
 .footer {
   padding: 24px 0;
+  border-top: 1px solid #DEE2E6;
+
+  display: flex;
+  justify-content: space-between;
 }
 .footer_copyright {
   font-size: 14px;
@@ -83,6 +90,12 @@ margin-top: 12px;
   background: #343A40;
   border-radius: 24px;
   padding: 80px;
+
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center
+  ;
 }
 .button {
   text-decoration: none;
@@ -154,6 +167,9 @@ margin: 0;
   padding-bottom: 12px;
   border-bottom: 1px solid #DEE2E6;
   margin-bottom: 40px;
+
+  display: flex;
+  justify-content: space-between;
 }
 .category_button {
   font-size: 16px;
@@ -241,4 +257,32 @@ margin: 0;
 .link_item:hover {
   text-decoration: underline;
 }
+.flex-container {
+  display: flex;
+  flex-direction: row;
+  
+  flex-wrap: wrap;
+  justify-content: center;
+  /* height: 900px; */
+  align-content: space-between;
+  /* border: 1px solid red; */
+  /* align-items: flex-start; */
+  gap: 24px;
+}
+.flex-item {
+  flex-basis: calc(50% - (24px / 2));
+  /* width: 50%; */
+  /* background: gray; */
+  /* margin: 15px; */
+}
+/* .flex-item:first-of-type {
+  background: red;
+  align-self: flex-end;
+  height: 100px;
+}
+.flex-item:last-of-type {
+  background: red;
+  align-self: flex-start;
+  height: 300px;
+} */
 
