--- a/src/container/template-2.hbs
+++ b/src/container/template-2.hbs
@@ -6,14 +6,14 @@
 <div class="page">
     <div class="page_content">
         <header class="page_block">
-            <div class="header row g-0">
-                <div class="col-3">
+            <div class="header">
+                <div class="">
                     <div class="logo">
                         {{> logo }}
                     </div>
                 </div>
 
-                <nav class="header_nav col-9">
+                <nav class="header_nav">
                     <div class="header_nav_right">
                         {{> nav list=header}}
                     </div>
@@ -32,9 +32,9 @@
         </section>
 
         <section class="page_block">
-            <div class="row g-4">
+            <div class="flex-container">
                 {{#each preview}}
-                <div class="col-6">
+                <div class="flex-item">
                     {{> cardPreview data=this}}
                 </div>
                 {{/each}}
@@ -47,19 +47,20 @@
                 <div class="row g-0">
                     <div class="col-12">
                         <div class="list_header">
-                            <div class="row g-0">
+                            {{!-- <div class="row g-0"> --}}
 
-                                <div class="col-6">
+                                <div>
                                     <h2 class="list_title">List of posts</h2>
                                 </div>
-                                <div class="col-6">
+                                <div>
                                     <div class="category_list">
                                         {{#each categories}}
                                         <button class="category_button">{{text}}</button>
                                         {{/each}}
                                     </div>
                                 </div>
-                            </div>
+                                {{!--
+                            </div> --}}
                         </div>
                     </div>
                     <div class="col-7">
@@ -87,10 +88,10 @@
 
 
         <footer class="page_block">
-            {{> divider }}
+            {{!-- {{> divider }} --}}
 
-            <div class="row footer">
-                <div class="col-3">
+            <div class="footer">
+                <div>
                     {{> logo }}
                     <span class="footer_copyright">Copyright 2023-2024</span>
                 </div>
