--- a/src/container/template-3.hbs
+++ b/src/container/template-3.hbs
@@ -56,16 +56,17 @@
 
 
 
-<footer class="footer" id="test">
+<footer class="page_block">
+    {{!-- {{> divider }} --}}
 
-    <div>
+    <div class="footer ">
         <div>
             {{> logo }}
             <span class="footer_copyright">Copyright 2023-2024</span>
         </div>
 
         {{#each footer}}
-        <div>
+        <div class="col-3">
             <span class="footer_title">{{title}}</span>
             {{> nav list=links isVertical=true}}
         </div>
