--- a/src/container/template-4.hbs
+++ b/src/container/template-4.hbs
@@ -15,16 +15,27 @@
 </header>
 {{#with main}}
 <div class="main">
-    <div class="main_contet">
-        <img src="{{image}}" alt="Main image" class="main_image">
+    <img src="/img/test2.png" alt="Main image" class="main_image">
+    <div class="main_content">
         <h1 class="main_title">{{heading}}</h1>
         <p class="description_text">{{description}}</p>
         <a href="{{href}}" class="button">{{button}}</a>
     </div>
 </div>
 {{/with}}
-<main class="featured">Featured</main>
-<div class="actions">Actions</div>
+<main class="featured">
+    {{#each featured}}
+    {{> cardFeatured data=this}}
+    {{/each}}
+</main>
+<div class="actions">
+    {{#each actions}}
+    <div class="form_actions">
+        <h3 class="actions_heading">{{heading}}</h3>
+        <a href="{{url}}" class="button_actions">{{text}}</a>
+    </div>
+    {{/each}}
+</div>
 
 
 
