--- a/src/container/template-4.hbs
+++ b/src/container/template-4.hbs
@@ -15,7 +15,7 @@
 </header>
 {{#with main}}
 <div class="main">
-    <img src="/img/test2.png" alt="Main image" class="main_image">
+    <img src="{{image}}" alt="Main image" class="main_image">
     <div class="main_content">
         <h1 class="main_title">{{heading}}</h1>
         <p class="description_text">{{description}}</p>
