--- a/src/component/cardFeatured.hbs
+++ b/src/component/cardFeatured.hbs
@@ -1,6 +1,6 @@
 {{#with data}}
 <div class="card_featured">
-    <img src="/img/test2.png" alt="Card photo" class="card_photo">
+    <img src="{{photo}}" alt="Card photo" class="card_photo">
     <h2 class="card_title">{{heading}}</h2>
     <p class="card_info">{{info}}</p>
     <a href="{{linkUrl}}" class="card_link">{{linkText}}</a>
