--- a/src/container/template-5 copy.hbs
+++ b/src/container/template-5 copy.hbs
@@ -51,27 +51,15 @@
         <p class="form_info">{{info}}</p>
     </form>
     {{/with}}
-
-
-
-    {{#each advantages}}
-    <div class="advantage">
-        <strong>{{title}}</strong>
-        <p>{{text}}</p>
-    </div>
-    {{/each}}
-
-
-
 </main>
-{{!-- <div class="advantages">
+<div class="advantages">
     {{#each advantages}}
     <div class="advan">
         <strong>{{title}}</strong>
         <p>{{text}}</p>
     </div>
     {{/each}}
-</div> --}}
+</div>
 
 
 <footer class="footer ">
