--- a/public/css/template-3.css
+++ b/public/css/template-3.css
@@ -1,3 +1,18 @@
+@import '/css/var.css';
+
+@font-face {
+  font-family: "SegmentRegular";
+  src: url('/font/Segment-Regular.otf');
+  font-weight: 400;
+}
+@font-face {
+  font-family: "SegmentSemiBold";
+  src: url('/font/Segment-SemiBold.otf');
+  font-weight: 600;
+}
+
+@layer normalize, main, component, style;
+
 @keyframes fly {
   from {
     top: 0;
@@ -25,7 +40,7 @@
     background: purple;
   }
 }
-:root {
+/* :root {
   --space-m: 12px;
   --space-xm: 16px;
   --space-l: 24px;
@@ -47,7 +62,7 @@
   --weight-text: 400;
 
   --page-width: 960px;
-}
+} */
 
 /* =================================================================================== */
 .page {
@@ -351,4 +366,75 @@ body:hover .modal {
 }
 /* .hero_image {
   position: relative;
+} */
+.blog {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+}
+@media all and (width <= 600px) {
+  .blog {
+    grid-template-columns: 1fr;
+  }
+}
+@media all and (600px < width <= 800px) {
+  .blog {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+/* @media all and (min-width: 601px) and (max-width: 800px) {
+  .blog {
+    grid-template-columns: repeat(2, 1fr);
+  }
+} */
+/* @media all and (min-height: 600px) {
+  .page_content {
+    background: red;
+  }
+} */
+.form {
+  gap: var(--space-l);
+}
+@media all and (width <= 560px) {
+  .form {
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+  }
+  .form_info {
+    max-width: 300px;
+    width: 100%;
+    line-height: 150%;
+  }
+  .form_content {
+    align-items: center;
+    text-align: center;
+  }
+}
+.hero_container {
+  container-type: inline-size;
+  container-name: hero;
+}
+@container hero (width < 960px) {
+  .hero {
+    flex-direction: column;
+  }
+}
+.ex {
+  display: inline-block;
+  font-size: 1.5em;
+  margin-left: 1ex;
+
+  line-height: 1.5em;
+}
+/* .test {
+  position: absolute;
+  background: red;
+  top: 0;
+  left: 0;
+
+  height: 100vmin;
+  width: 100vmin;
+} */
+/* .hero_title {
+  font-size: 5cqw;
 } */
