--- a/src/container/slack.hbs
+++ b/src/container/slack.hbs
@@ -7,11 +7,18 @@
     </title>
     <meta charset='utf-8' />
 
+
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+
+
     <link href='css/normalize.css' rel='stylesheet' />
 
 
 
     <link href='css/slack.css' rel='stylesheet' />
+
+
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -31,10 +38,10 @@
                     <div class="hero_content">
                         <span class="hero_label">Slack Features</span>
                         <h1 class="hero_title">One platform for your team and your work</h1>
-                        <p class="hero_info">All the features of Slack work together so you can, too.</p>
+                        <p class="double_line hero_info">All the features of Slack work together so you can, too.</p>
                         <div class="hero_buttons">
-                            <a href="#" class="button button_primary">Try for free</a>
-                            <a href="#" class="button button_secondary">See all features</a>
+                            <a href="#" class="button button_primary click">Try for free</a>
+                            <a href="#" class="button button_secondary click">See all features</a>
                         </div>
                         <img src="/img/hero.png" alt="Hero" class="hero_image">
                     </div>
@@ -56,7 +63,70 @@
         </section>
 
         <section class="page_section page_section_light">
-            <div class="page_content features_section">Test</div>
+            <div class="page_content features_section">
+                <h2 class="features_title">Work more easily with everyone</h2>
+                <p class="double_line features_description">Stay on the same page and make decisions faster by bringing
+                    all of
+                    your work communication into one place.</p>
+
+
+                <div class="features_grid_4">
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/connect.svg')"></span>
+                        <strong class="feat_card_title">Slack Connect</strong>
+                        <p class="double_line feat_card_description">Collaborate with teams at other
+                            companies the same way you do
+                            with teams at your own.</p>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+
+                    </div>
+
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/Channels.svg')"></span>
+                        <strong class="feat_card_title">Channels</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/Huddles.svg')"></span>
+                        <strong class="feat_card_title">Huddles</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/Clips.svg')"></span>
+                        <strong class="feat_card_title">Clips</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/Canvas.svg')"></span>
+                        <strong class="feat_card_title">Canvas</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon" style="background-image: url('/svg/feature/Messaging.svg')"></span>
+                        <strong class="feat_card_title">Messaging</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+
+                    </div>
+
+                    <div class="feat_card">
+                        <span class="icon feat_icon"
+                            style="background-image: url('/svg/feature/Accessibility.svg')"></span>
+                        <strong class="feat_card_title">Accessibility</strong>
+                        <a href="#" class="icon icon_arrow click feat_link"></a>
+
+                    </div>
+                </div>
+            </div>
         </section>
     </div>
 
