--- a/public/css/dashboard.css
+++ b/public/css/dashboard.css
@@ -9,6 +9,7 @@ body {
     --color-white: #ffffff;
     --color-black: #000;
     --color-gray: rgba(0,0,0,0.7);
+    --color-lighter: rgba(255,255,255,0.7);
 
     --color-primary: #0d6efd;
     --color-light: #ced4da;
@@ -71,7 +72,7 @@ body {
     }
     .vertical {
         display: grid;
-        gap: var(--size-5);
+        gap: var(--spacing-5);
     }
     .aside {
         padding: var(--spacing-5);
@@ -113,9 +114,11 @@ body {
     }
     .click:hover {
         opacity: var(--opacity-1);
+        cursor: pointer;
     }
     .click:active {
         opacity: var(--opacity-2);
+        cursor: pointer;
     }
     .header {
         background-color: var(--color-white);
@@ -131,6 +134,24 @@ body {
         border: 1px solid var(--color-light);
         padding: 0 var(--spacing-2);
         border-radius: var(--radius-1);
+       }
+       .box {
+        background-color: var(--color-white);
+        padding: var(--spacing-4);
+        border-radius: 16px;
+
+       }
+       .analytic {
+        border-radius: 8px;
+        padding: var(--spacing-5);
+        display: flex;
+        flex-direction: column;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        align-items: flex-start;
+       }
+       .relative {
+        position: relative;
        }
 /* } */
 
@@ -162,6 +183,12 @@ body {
     max-width: 30%;
     min-width: 180px;
     background-color: #f8fafc;
+   }
+   .header_icon_3 {
+    width: 100%;
+    max-width: 70%;
+    min-width: 180px;
+    background-color: #f8fafc;
     position: relative;
    }
    .header_icon_search {
@@ -178,6 +205,85 @@ body {
     top: calc(50% - (20px / 2));
     right: var(--spacing-2);
    }
+   .header_icon_right {
+    display: flex;
+    gap: 20px;
+    position: absolute;
+    top: calc(50% - (20px / 2));
+    right: var(--spacing-2);
+    border-radius: 4px;
+   }
+   .header_icon_wifi {
+    padding: 4px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 28px;
+    width: 28px;
+    color: #FFBF35;
+   }
+   .header_icon_translator {
+    padding: 4px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 28px;
+    width: 28px;
+    color: #008DDD;
+   }
+   .header_icon_message {
+    padding: 4px;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+    height: 28px;
+    width: 28px;
+    color: #FFBF35;
+   }
+   .field_select {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    /* opacity: 0; */
+    cursor: pointer;
+   }
+   .analytic_block {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: 1fr, 1fr;
+    gap: 24px;
+   }
+   .analytic_button {
+    height: 44px;
+    width: 44px;
+   }
+   .analytic_title {
+    font-size: var(--size-6);
+   }
+   .analytic_arrow {
+    width: 20px;
+    height: 20px;
+    position: absolute;
+    top: 0;
+    left: calc(100% + var(--spacing-1));
+   }
+   .analytic_content {
+    display: flex;
+    padding: 24px;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 12px;
+    align-self: stretch;
+    border-radius: 8px;
+   }
+   .analytic_content_text {
+    display: flex;
+    align-items: flex-start;
+    gap: 12px;
+   }
+   
 /* } */
 
 /* @layer mod { */
@@ -190,6 +296,9 @@ body {
     .text_gray {
         color: var(--color-gray);
     }
+    .text_lighter {
+        color: var(--color-lighter);
+    }
     .text_line {
         line-height: var(--line-height);
     }
@@ -199,6 +308,9 @@ body {
     .vertical_small {
         gap: var(--spacing-2);
     }
+    /* .vertical_big {
+        gap: var(--spacing-5);
+    } */
     .nav_button_active {
         background: var(--color-primary);
     }
@@ -206,7 +318,8 @@ body {
         padding-left: 44px;
         padding-right: 44px;
         width: 100%;
-        height: 52px;
+        height: 52px 
+        ;
     }
     .field_header::placeholder {
         color: #bdbdbd;
@@ -217,9 +330,48 @@ body {
     .icon_color_blue {
         background-color: var(--color-blue-dark);
     }
+    .icon_color_blue_dark {
+        background-color: #402b9c;
+    }
+    .icon_color_yellow {
+        background-color: #FFF8E3;
+    }
+     .icon_color_wifi_message {
+        background-color: #FFF8E3;
+    }
+    .icon_color_translator {
+        background-color: #E1F3FC;
+    }
+    .field_select {
+        display: flex;
+        align-items: center;
+        position: relative;
+    }
+    .analytic_double {
+        grid-row: 1 / 3;
+    }
+    .analytic_blue {
+        background-color: var(--color-blue-light);
+    }
+    .analytic_dark_blue {
+        background-color: #5B39AD;
+    }
+    .analytic_white {
+        background-color: var(--color-white);
+    }
 /* } */
 
-@layer adaptive {
-   
+/* @layer adaptive { */
+   @media all and (width <= 1000px) {
+    .page_dashboard {
+        grid-template-columns: 1fr;
+    }
+    .aside {
+        display: none;
+    }
+    .header {
+        display: none;
+    }
+   }
     
-}
+/* } */
