--- a/src/container/dashboard.hbs
+++ b/src/container/dashboard.hbs
@@ -31,8 +31,8 @@
 <body>
 
     <div class="page page_dashboard">
-        <aside class="page_aside aside vertical">
-            <div class="aside_logo">
+        <aside class="page_aside aside vertical vertical_big">
+            <div class="text aside_logo">
                 Sidebar
             </div>
             <nav class="vertical vertical_small">
@@ -48,20 +48,95 @@
                     <span class="icon nav_button_icon" style="background-image: url('/svg/nav/products.svg')"></span>
                     <span class="text text_light">Products</span>
                 </a>
+
+                {{!-- <div class="relative click">
+                    <div class="field field_select">
+                        <span class="text text_light">Choose...</span>
+                    </div>
+                    <select class="field_select">
+                        <option value="dog">Dog</option>
+                        <option value="cat">Cat</option>
+                        <option value="hamster">Hamster</option>
+                        <option value="parrot">Parrot</option>
+                        <option value="spider">Spider</option>
+                    </select>
+
+                </div> --}}
             </nav>
         </aside>
         <header class="header">
             <div class="layout header_content text_small">
-                <div class="header_search">
-                    <input type="text" placeholder="Search" class="field field_header">
+                <div class="header_search relative">
+                    <input type="text" placeholder="Search" class="text field field_header">
                     <span class="icon header_icon_search"
                         style="background-image: url('/svg/header/search.svg');"></span>
                     <span class="icon header_icon_settings icon_button icon_color_blue click"
                         style="background-image: url('/svg/header/setting.svg');"></span>
                 </div>
+                <div class="header_icon_3">
+                    <div class="header_icon_right">
+                        <span class="icon header_icon_wifi icon_button icon_color_wifi_message click"
+                            style="background-image: url('/svg/header/wifi.svg');"></span>
+                        <span class="icon header_icon_translator icon_button icon_color_blue click"
+                            style="background-image: url('/svg/header/translator.svg');"></span>
+                        <span class="icon header_icon_message icon_button icon_color_wifi_message click"
+                            style="background-image: url('/svg/header/message.svg');"></span>
+                    </div>
+                </div>
             </div>
         </header>
-        <main class="main">123</main>
+        <main class="main">
+            <div class="layout">
+                <section class="box analytic_block">
+                    <div class="analytic analytic_double analytic_blue">
+                        <span class="icon analytic_button icon_button icon_color_blue click"
+                            style="background-image: url('/svg/analytic/order.svg');"></span>
+
+                        <div class="relative vertical vertical_small">
+                            <div class="analytic_title text text_light">$961</div>
+                            <div class="analytic_info text text_small text_lighter">Total Order</div>
+
+                            <span class="icon analytic_arrow"
+                                style="background-image: url('/svg/analytic/arrow.svg');"></span>
+                        </div>
+                    </div>
+                    <div class="analytic analytic_double analytic_dark_blue">
+                        <span class="icon analytic_button icon_button icon_color_blue_dark click"
+                            style="background-image: url('/svg/analytic/earning.svg');"></span>
+
+                        <div class="relative vertical vertical_small">
+                            <div class="analytic_title text text_light">$500.00</div>
+                            <div class="analytic_info text text_small text_lighter">Total earning</div>
+
+                            <span class="icon analytic_arrow"
+                                style="background-image: url('/svg/analytic/arrow.svg');"></span>
+                        </div>
+                    </div>
+                    <div class="analytic analytic_content analytic_blue">
+                        <div class="analytic_content_text">
+                            <span class="icon analytic_button icon_button icon_color_blue"
+                                style="background-image: url('/svg/analytic/earning.svg');"></span>
+
+                            <div class="relative vertical vertical_small">
+                                <div class="analytic_title text text_light">$203k</div>
+                                <div class="analytic_info text text_small text_lighter">Total Income</div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="analytic analytic_content analytic_white">
+                        <div class="analytic_content_text">
+                            <span class="icon analytic_button icon_button icon_color_yellow"
+                                style="background-image: url('/svg/analytic/income.svg');"></span>
+
+                            <div class="relative vertical vertical_small">
+                                <div class="analytic_title text text_light">$203k</div>
+                                <div class="analytic_info text text_small text_lighter">Total Income</div>
+                            </div>
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </main>
     </div>
 
 </body>
