--- a/public/css/template-7.css
+++ b/public/css/template-7.css
@@ -45,68 +45,188 @@
 }
 /* ==================================================================================== */
 .header {
-  padding: var(--space-l) 0;
-  border-bottom: 1px solid var(--color-border);
-
-  display: flex;
-  justify-content: space-between;
+ display: grid;
+grid-row: 1fr 1fr;
 }
-.logo {
-  font-size: 17px;
-  color: var(--color-white);
-  
-  background: var(--color-primary);
-  width: 24px;
-  height: 24px;
-  border-radius: calc(var(--border-radius) / 2);
-  display: flex;
+.header_content {
+  /* display: flex; */
   justify-content: center;
   align-items: center;
+  border-bottom: 1px solid #253041;
+  
 }
-.nav {
-  display: flex;
-}
-.nav_inLine {
-  gap: var(--space-l);
-}
-.nav_vertical {
-  gap: var(--space-xm);
-  flex-direction: column;
-}
-.nav_link {
-color: var(--color-text);
-font-size: var(--size-d);
-text-decoration: none;
-
-line-height: 100%;
-}
-
-.nav_link:hover {
-  text-decoration: underline;
-  color: var(--color-primary);
-}
-
-.footer {
-  padding: var(--space-l) 0;
-  border-top: 1px solid  var(--color-border);
-
+.header_block_logo {
   display: flex;
   justify-content: space-between;
+  padding: 8px 12px;
+  /* align-items: flex-start; */
+  gap: 10px;
+
+ 
 }
-.footer_copyright {
-  font-size: var(--size-s);
-  color: var(--color-text);
-
-display: block;
-
-margin-top: var(--space-l);
+.header_logo {
+  display: flex;
+  justify-content: flex-start;
+padding: 8px 12px;
+align-items: flex-start;
+gap: 10px;
+border-radius: 10px;
+background: #885FFB;
 }
-.footer_title {
-  font-size: var(--size-l);
-  color: var(--color-title);
+.header_userOnline {
+  justify-content: flex-end;
+  color: #FFF;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 100%;
+  margin-top: 48px;
+}
+.ad_text_url {
+  color: #FFF;
+font-family: Roboto;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 100%;
+}
+.links_card {
+  display: flex;
+  justify-content: flex-end;
+align-content: flex-start;
+gap: 24px;
+/* margin-right: 600px; */
+margin-bottom: 12px;
+}
 
-  display: block;
-  margin-bottom: var(--space-l);
+.header_links {
+  display: flex;
+align-items: center;
+gap: 24px;
+}
 
-  font-weight: var(--weight-title);
+
+.main_hero {
+  display: flex;
+height: 300px;
+padding: 32px;
+flex-direction: column;
+justify-content: center;
+align-items: center;
+gap: 16px;
+align-self: stretch;
+
+border-radius: 24px;
+background: radial-gradient(632.95% 141.42% at 100.00% 100.00%, rgba(17, 24, 39, 0.00) 0%, rgba(78, 63, 146, 0.60) 100%);
+box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
+margin-bottom: 60px;
+}
+.info_title {
+  color: #FFF;
+text-align: center;
+font-family: Roboto;
+font-size: 36px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%;
+}
+.info_description {
+  color: #9CA3AF;
+text-align: center;
+font-size: 16px;
+font-style: normal;
+font-weight: 400;
+line-height: 150%;
+}
+.hero_buttom {
+  display: flex;
+width: 150px;
+padding: 12px 119px;
+justify-content: center;
+align-items: center;
+gap: 12px;
+
+border-radius: 10px;
+background: #885FFB;
+}
+.about {
+  display: flex;
+padding: 32px;
+flex-direction: column;
+align-items: flex-start;
+gap: 16px;
+align-self: stretch;
+
+border-radius: 24px;
+background: rgba(42, 49, 65, 0.44);
+backdrop-filter: blur(25px);
+margin-bottom: 60px;
+}
+.heading_about {
+  width: 600px;
+  color: #FFF;
+font-family: Roboto;
+font-size: 24px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%;
+}
+.about_info {
+  align-self: stretch;
+  color: #9CA3AF;
+font-size: 14px;
+font-style: normal;
+font-weight: 400;
+line-height: 170%;
+}
+
+.about_title {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  color: #FFF;
+font-size: 32px;
+font-style: normal;
+font-weight: 700;
+line-height: 100%;
+gap: 20px;
+margin-bottom: 32px;
+}
+.articles {
+  display: flex;
+  justify-content: center;
+align-items: flex-start;
+gap: 16px;
+}
+.articles_card {
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+
+}
+.articles_photo {
+  width: 300px;
+height: 200px;
+border-radius: 10px;
+}
+.article_card_button {
+  display: flex;
+  justify-content: flex-start;
+  align-content: center;
+}
+.article_button {
+ 
+padding: 8px 16px;
+justify-content: center;
+align-items: center;
+gap: 8px;
+border-radius: 10px;
+background: #885FFB;
+}
+.footer {
+  display: flex;
+padding-bottom: 32px;
+align-items: flex-start;
+gap: 16px;
+align-self: stretch;
 }
