--- a/public/css/template-7.css
+++ b/public/css/template-7.css
@@ -67,6 +67,7 @@ grid-row: 1fr 1fr;
 .header_logo {
   display: flex;
   justify-content: flex-start;
+  text-align: center;
 padding: 8px 12px;
 align-items: flex-start;
 gap: 10px;
@@ -90,13 +91,31 @@ font-style: normal;
 font-weight: 400;
 line-height: 100%;
 }
+.ad_badge_card {
+display: flex;
+
+align-items: flex-start;
+gap: 10px;
+
+
+}
+.ad_badge {
+  color: #885FFB;
+font-size: 14px;
+font-weight: 700;
+line-height: 100%;
+padding: 2px 6px;
+border: 1px solid #885FFB;
+border-radius: 4px;
+background: rgba(136, 95, 251, 0.20);
+}
 .links_card {
   display: flex;
   justify-content: flex-end;
-align-content: flex-start;
-gap: 24px;
+  align-content: center;
+  gap: 24px;
 /* margin-right: 600px; */
-margin-bottom: 12px;
+  margin-bottom: 12px;
 }
 
 .header_links {
@@ -108,68 +127,81 @@ gap: 24px;
 
 .main_hero {
   display: flex;
-height: 300px;
-padding: 32px;
-flex-direction: column;
-justify-content: center;
-align-items: center;
-gap: 16px;
-align-self: stretch;
+  height: 300px;
 
-border-radius: 24px;
-background: radial-gradient(632.95% 141.42% at 100.00% 100.00%, rgba(17, 24, 39, 0.00) 0%, rgba(78, 63, 146, 0.60) 100%);
-box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
-margin-bottom: 60px;
+  flex-direction: column;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  border-radius: 24px;
+  background: radial-gradient(632.95% 141.42% at 100.00% 100.00%, rgba(17, 24, 39, 0.00) 0%, rgba(78, 63, 146, 0.60) 100%);
+  box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
+  margin-bottom: 60px;
 }
-.info_title {
+
+.hero_title {
+  width: 600px;
   color: #FFF;
-text-align: center;
-font-family: Roboto;
-font-size: 36px;
-font-style: normal;
-font-weight: 700;
-line-height: 100%;
+  text-align: center;
+  font-size: 36px;
+  font-weight: 700;
+  line-height: 100%;
+  margin-bottom: 20px;
 }
-.info_description {
+.hero_description {
+  width: 600px;
   color: #9CA3AF;
-text-align: center;
-font-size: 16px;
-font-style: normal;
-font-weight: 400;
-line-height: 150%;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 150%;
+  margin-bottom: 20px;
 }
-.hero_buttom {
+.hero_button_card {
   display: flex;
-width: 150px;
-padding: 12px 119px;
-justify-content: center;
-align-items: center;
-gap: 12px;
-
-border-radius: 10px;
-background: #885FFB;
+  justify-content: center;
+  align-items: center;
+}
+.hero_button {
+  display: inline-block;
+  width: 200px;
+  height: 50px;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-content: center;
+  border: 1px solid  #885FFB;
+  border-radius: 10px;
+  background: #885FFB;
+}
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12px 60px;
+  text-decoration: none;
+  text-align: center;
 }
 .about {
   display: flex;
-padding: 32px;
-flex-direction: column;
-align-items: flex-start;
-gap: 16px;
-align-self: stretch;
+  padding: 32px;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
 
-border-radius: 24px;
-background: rgba(42, 49, 65, 0.44);
-backdrop-filter: blur(25px);
-margin-bottom: 60px;
+  border-radius: 24px;
+  background: rgba(42, 49, 65, 0.44);
+  backdrop-filter: blur(25px);
+  margin-bottom: 60px;
 }
 .heading_about {
   width: 600px;
   color: #FFF;
-font-family: Roboto;
-font-size: 24px;
-font-style: normal;
-font-weight: 700;
-line-height: 100%;
+  font-family: Roboto;
+  font-size: 24px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
 }
 .about_info {
   align-self: stretch;
