--- a/public/css/template-7.css
+++ b/public/css/template-7.css
@@ -49,86 +49,128 @@
 grid-row: 1fr 1fr;
 }
 .header_content {
-  /* display: flex; */
   justify-content: center;
   align-items: center;
-  border-bottom: 1px solid #253041;
-  
+  position: relative;
+  margin-bottom: 0;
 }
 .header_block_logo {
   display: flex;
   justify-content: space-between;
-  padding: 8px 12px;
-  /* align-items: flex-start; */
-  gap: 10px;
-
- 
+}
+.header_divider {
+  display: flex;
+  border-bottom: 1px solid #253041;
+  position: relative;
+  z-index: 2;
+  bottom: 60px;
 }
 .header_logo {
   display: flex;
-  justify-content: flex-start;
+  width: 60px;
+  height: 36px;
+  padding: 8px 12px;
+  position: relative;
+  float: left;
+  z-index: 12;
+  border-radius: 10px;
+  background: #885FFB;
+  top: 24px;
+}
+.logo {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   text-align: center;
-padding: 8px 12px;
-align-items: flex-start;
-gap: 10px;
-border-radius: 10px;
-background: #885FFB;
 }
 .header_userOnline {
+  display: flex;
   justify-content: flex-end;
+  position: relative;
+  clear: right;
+  top: 80px;
   color: #FFF;
   font-size: 14px;
-  font-style: normal;
   font-weight: 400;
   line-height: 100%;
   margin-top: 48px;
+  top: 60px;
+}
+
+.ad_badge_text_url {
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-end;
+}
+.ad_url{
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  margin-left: 300px;
+}
+.ad_text {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  clear: left;
+  top: 15px;
+  z-index: 4;
+  margin-left: 20px;
+  margin-top: 40px;
 }
 .ad_text_url {
+  position: relative;
+  float: left;
+  z-index: 6;
   color: #FFF;
-font-family: Roboto;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 100%;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 100%;
+  bottom: 6px;
 }
 .ad_badge_card {
 display: flex;
-
+position: relative;
 align-items: flex-start;
 gap: 10px;
-
-
+bottom: 6px;
 }
 .ad_badge {
+  position: relative;
+  float: left;
+  z-index: 8;
   color: #885FFB;
-font-size: 14px;
-font-weight: 700;
-line-height: 100%;
-padding: 2px 6px;
-border: 1px solid #885FFB;
-border-radius: 4px;
-background: rgba(136, 95, 251, 0.20);
+  font-size: 14px;
+  font-weight: 700;
+  line-height: 100%;
+  padding: 2px 6px;
+  border: 1px solid #885FFB;
+  border-radius: 4px;
+  background: rgba(136, 95, 251, 0.20);
 }
 .links_card {
   display: flex;
   justify-content: flex-end;
   align-content: center;
   gap: 24px;
-/* margin-right: 600px; */
-  margin-bottom: 12px;
+  position: relative;
+  clear: right;
+  z-index: 10;
+  bottom: 90px;
 }
 
 .header_links {
   display: flex;
-align-items: center;
-gap: 24px;
+  align-items: center;
+  gap: 24px;
 }
 
 
 .main_hero {
   display: flex;
+  position: relative;
   height: 300px;
-
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: center;
@@ -137,6 +179,7 @@ gap: 24px;
   background: radial-gradient(632.95% 141.42% at 100.00% 100.00%, rgba(17, 24, 39, 0.00) 0%, rgba(78, 63, 146, 0.60) 100%);
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
   margin-bottom: 60px;
+  top: 0px;
 }
 
 .hero_title {
@@ -180,6 +223,7 @@ gap: 24px;
   padding: 12px 60px;
   text-decoration: none;
   text-align: center;
+  color: #FFFFFF;
 }
 .about {
   display: flex;
@@ -206,10 +250,10 @@ gap: 24px;
 .about_info {
   align-self: stretch;
   color: #9CA3AF;
-font-size: 14px;
-font-style: normal;
-font-weight: 400;
-line-height: 170%;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 170%;
 }
 
 .about_title {
@@ -217,18 +261,22 @@ line-height: 170%;
   justify-content: flex-start;
   align-items: center;
   color: #FFF;
-font-size: 32px;
-font-style: normal;
-font-weight: 700;
-line-height: 100%;
-gap: 20px;
-margin-bottom: 32px;
+  font-size: 32px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: 100%;
+  gap: 20px;
+  margin-bottom: 32px;
 }
 .articles {
   display: flex;
-  justify-content: center;
-align-items: flex-start;
-gap: 16px;
+  justify-content: stretch;
+  align-items: stretch;
+  position: relative;
+  flex-direction: row;
+  gap: 16px;
+  /* min-width: 800px; */
+  width: 800px;
 }
 .articles_card {
   display: flex;
@@ -237,28 +285,71 @@ gap: 16px;
 
 }
 .articles_photo {
-  width: 300px;
-height: 200px;
-border-radius: 10px;
+  width: 310px;
+  height: 220px;
+  border-radius: 10px;
 }
 .article_card_button {
   display: flex;
   justify-content: flex-start;
-  align-content: center;
+  align-items: center;
 }
 .article_button {
- 
-padding: 8px 16px;
-justify-content: center;
-align-items: center;
-gap: 8px;
-border-radius: 10px;
-background: #885FFB;
+  padding: 8px 16px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 10px;
+  background: #885FFB;
+  color: #FFFFFF;
+  text-decoration: none;
+}
+.view_all {
+  display: flex;
+  justify-content: flex-end;
+  align-items: flex-end;
+  position: relative;
+  float: right;
+  width: 100px;
+  height: 42px;
+  padding: 12px 20px;
+  justify-content: center;
+  align-items: center;
+  gap: 8px;
+  border-radius: 10px;
+  border: 1px solid #9ca3af;
+  left: 680px;
+  top: 560px;
+}
+.view_all_text {
+  color: #FFF;
+  font-size: 16px;
+  font-weight: 700;
+  line-height: 100%;
 }
 .footer {
   display: flex;
-padding-bottom: 32px;
-align-items: flex-start;
-gap: 16px;
-align-self: stretch;
+  padding-bottom: 32px;
+  align-items: flex-start;
+  gap: 16px;
+  align-self: stretch;
+}
+.footer_copyright_card {
+  display: flex;
+  position: relative;
+  left: 640px;
+  color: #9CA3AF;
+  font-size: 16px;
+  font-weight: 400;
+  line-height: 100%;
+}
+.footer_pages_card {
+  display: flex;
+  position: relative;
+  right: 336px;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  gap: 16px;
+  color: #FFFFFF;
 }
