--- a/public/css/template-7.css
+++ b/public/css/template-7.css
@@ -1,13 +1,18 @@
 :root {
+  --space-sm: 8px;
   --space-m: 12px;
   --space-xm: 16px;
   --space-l: 24px;
   --space-b: 36px;
+  --space-xb: 32px;
+  --space-mb: 60px;
 
   --size-d: 16px;
   --size-s: 14px;
   --size-l: 20px;
   --size-b: 24px;
+  --size-c: 36px;
+  --size-sc: 10px;
 
 
   --color-border: #DEE2E6;
@@ -16,14 +21,18 @@
   --color-white: #FFFFFF;
   --color-title: #212529;
   --color-text: #343a40;
+  --color-primary-a: #885FFB;
 
-  --border-radius: 12px;
+  --border-radius: 10px;
+  --border-radius-l: 24px;
 
   
 
 
-  --weight-title: 600;
+  --weight-title: 700;
   --weight-text: 400;
+
+  --opacity-a: 0.7;
 }
 
 /* =================================================================================== */
@@ -63,19 +72,19 @@ grid-row: 1fr 1fr;
   border-bottom: 1px solid #253041;
   position: relative;
   z-index: 2;
-  bottom: 60px;
+  bottom: var(--space-mb);
 }
 .header_logo {
   display: flex;
-  width: 60px;
-  height: 36px;
-  padding: 8px 12px;
+  width: var(--space-mb);
+  height: var(--size-c);
+  padding: var(--space-sm) var(--space-m);
   position: relative;
   float: left;
   z-index: 12;
-  border-radius: 10px;
-  background: #885FFB;
-  top: 24px;
+  border-radius: var(--border-radius);
+  background: var(--color-primary-a);
+  top: var(--space-l);
 }
 .logo {
   display: flex;
@@ -83,18 +92,24 @@ grid-row: 1fr 1fr;
   align-items: center;
   text-align: center;
 }
+
+.logo:hover {
+  opacity: var(--opacity-a);
+  cursor: pointer;
+}
+
 .header_userOnline {
   display: flex;
   justify-content: flex-end;
   position: relative;
   clear: right;
   top: 80px;
-  color: #FFF;
-  font-size: 14px;
-  font-weight: 400;
+  color: var(--color-white);
+  font-size: var(--size-s);
+  font-weight: var(--weight-text);
   line-height: 100%;
   margin-top: 48px;
-  top: 60px;
+  top: var(--space-mb);
 }
 
 .ad_badge_text_url {
@@ -108,6 +123,11 @@ grid-row: 1fr 1fr;
   align-items: center;
   margin-left: 300px;
 }
+
+.ad_url:hover {
+  opacity: var(--opacity-a);
+  cursor: pointer;
+}
 .ad_text {
   display: flex;
   justify-content: flex-start;
@@ -116,16 +136,16 @@ grid-row: 1fr 1fr;
   clear: left;
   top: 15px;
   z-index: 4;
-  margin-left: 20px;
+  margin-left: var(--size-l);
   margin-top: 40px;
 }
 .ad_text_url {
   position: relative;
   float: left;
   z-index: 6;
-  color: #FFF;
-  font-size: 14px;
-  font-weight: 400;
+  color: var(--color-white);
+  font-size: var(--size-s);
+  font-weight: var(--weight-text);
   line-height: 100%;
   bottom: 6px;
 }
@@ -140,12 +160,12 @@ bottom: 6px;
   position: relative;
   float: left;
   z-index: 8;
-  color: #885FFB;
-  font-size: 14px;
-  font-weight: 700;
+  color: var(--color-primary-a);
+  font-size: var(--size-s);
+  font-weight: var(--weight-title);
   line-height: 100%;
   padding: 2px 6px;
-  border: 1px solid #885FFB;
+  border: 1px solid var(--color-primary-a);
   border-radius: 4px;
   background: rgba(136, 95, 251, 0.20);
 }
@@ -153,7 +173,7 @@ bottom: 6px;
   display: flex;
   justify-content: flex-end;
   align-content: center;
-  gap: 24px;
+  gap: var(--space-l);
   position: relative;
   clear: right;
   z-index: 10;
@@ -163,7 +183,11 @@ bottom: 6px;
 .header_links {
   display: flex;
   align-items: center;
-  gap: 24px;
+  gap: var(--space-l);
+}
+
+.header_links:hover {
+  opacity: var(--opacity-a);
 }
 
 
@@ -175,30 +199,30 @@ bottom: 6px;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  border-radius: 24px;
+  border-radius: var(--border-radius-l);
   background: radial-gradient(632.95% 141.42% at 100.00% 100.00%, rgba(17, 24, 39, 0.00) 0%, rgba(78, 63, 146, 0.60) 100%);
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.10);
-  margin-bottom: 60px;
+  margin-bottom: var(--space-mb);
   top: 0px;
 }
 
 .hero_title {
   width: 600px;
-  color: #FFF;
+  color: var(--color-white);
   text-align: center;
-  font-size: 36px;
-  font-weight: 700;
+  font-size: var(--space-b);
+  font-weight: var(--weight-title);
   line-height: 100%;
-  margin-bottom: 20px;
+  margin-bottom: var(--size-l);
 }
 .hero_description {
   width: 600px;
   color: #9CA3AF;
   text-align: center;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: var(--size-d);
+  font-weight: var(--weight-text);
   line-height: 150%;
-  margin-bottom: 20px;
+  margin-bottom: var(--size-l);
 }
 .hero_button_card {
   display: flex;
@@ -212,47 +236,52 @@ bottom: 6px;
   flex-wrap: wrap;
   justify-content: center;
   align-content: center;
-  border: 1px solid  #885FFB;
-  border-radius: 10px;
-  background: #885FFB;
+  border: 1px solid  var(--color-primary-a);
+  border-radius: var(--border-radius);
+  background: var(--color-primary-a);
+}
+
+.hero_button:hover {
+  opacity: var(--opacity-a);
+  cursor: pointer;
 }
 .button {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding: 12px 60px;
+  padding: var(--space-m) var(--space-mb);
   text-decoration: none;
   text-align: center;
-  color: #FFFFFF;
+  color: var(--color-white);
 }
 .about {
   display: flex;
-  padding: 32px;
+  padding: var(--space-xb);
   flex-direction: column;
   align-items: flex-start;
-  gap: 16px;
+  gap: var(--space-xm);
   align-self: stretch;
 
-  border-radius: 24px;
+  border-radius: var(--border-radius-l);
   background: rgba(42, 49, 65, 0.44);
   backdrop-filter: blur(25px);
-  margin-bottom: 60px;
+  margin-bottom: var(--space-mb);
 }
 .heading_about {
   width: 600px;
-  color: #FFF;
+  color: var(--color-white);
   font-family: Roboto;
-  font-size: 24px;
+  font-size: var(--size-b);
   font-style: normal;
-  font-weight: 700;
+  font-weight: var(--weight-title);
   line-height: 100%;
 }
 .about_info {
   align-self: stretch;
   color: #9CA3AF;
-  font-size: 14px;
+  font-size: var(--size-s);
   font-style: normal;
-  font-weight: 400;
+  font-weight: var(--weight-text);
   line-height: 170%;
 }
 
@@ -260,13 +289,13 @@ bottom: 6px;
   display: flex;
   justify-content: flex-start;
   align-items: center;
-  color: #FFF;
-  font-size: 32px;
+  color: var(--color-white);
+  font-size: var(--space-xb);
   font-style: normal;
-  font-weight: 700;
+  font-weight: var(--weight-title);
   line-height: 100%;
-  gap: 20px;
-  margin-bottom: 32px;
+  gap: var(--size-l);
+  margin-bottom: var(--space-xb);
 }
 .articles {
   display: flex;
@@ -274,34 +303,39 @@ bottom: 6px;
   align-items: stretch;
   position: relative;
   flex-direction: row;
-  gap: 16px;
-  /* min-width: 800px; */
+  gap: var(--space-xm);
   width: 800px;
 }
 .articles_card {
   display: flex;
   flex-direction: column;
-  gap: 32px;
+  gap: var(--space-xb);
 
 }
 .articles_photo {
   width: 310px;
   height: 220px;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
 }
 .article_card_button {
   display: flex;
   justify-content: flex-start;
   align-items: center;
 }
+
+.article_button:hover {
+  opacity: var(--opacity-a);
+  cursor: pointer;
+}
+
 .article_button {
-  padding: 8px 16px;
+  padding: var(--space-sm) var(--space-xm);
   justify-content: center;
   align-items: center;
-  gap: 8px;
-  border-radius: 10px;
-  background: #885FFB;
-  color: #FFFFFF;
+  gap: var(--space-sm);
+  border-radius: var(--border-radius);
+  background: var(--color-primary-a);
+  color: var(--color-white);
   text-decoration: none;
 }
 .view_all {
@@ -312,26 +346,31 @@ bottom: 6px;
   float: right;
   width: 100px;
   height: 42px;
-  padding: 12px 20px;
+  padding: var(--space-m) var(--size-l);
   justify-content: center;
   align-items: center;
-  gap: 8px;
-  border-radius: 10px;
+  gap: var(--space-sm);
+  border-radius: var(--border-radius);
   border: 1px solid #9ca3af;
   left: 680px;
   top: 560px;
 }
+
+.view_all:hover {
+  opacity: var(--opacity-a);
+  cursor: pointer;
+}
 .view_all_text {
-  color: #FFF;
-  font-size: 16px;
-  font-weight: 700;
+  color: var(--color-white);
+  font-size: var(--size-d);
+  font-weight: var(--weight-title);
   line-height: 100%;
 }
 .footer {
   display: flex;
-  padding-bottom: 32px;
+  padding-bottom: var(--space-xb);
   align-items: flex-start;
-  gap: 16px;
+  gap: var(--space-xm);
   align-self: stretch;
 }
 .footer_copyright_card {
@@ -339,8 +378,8 @@ bottom: 6px;
   position: relative;
   left: 640px;
   color: #9CA3AF;
-  font-size: 16px;
-  font-weight: 400;
+  font-size: var(--size-d);
+  font-weight: var(--weight-text);
   line-height: 100%;
 }
 .footer_pages_card {
@@ -350,6 +389,11 @@ bottom: 6px;
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  gap: 16px;
-  color: #FFFFFF;
+  gap: var(--space-xm);
+  color: var(--color-white);
+}
+
+.footer_pages:hover {
+  opacity: var(--opacity-a);
+  cursor: pointer;
 }
